Username not correctly displayed when too long. Edit profile link is … (#6796)
* Username not correctly displayed when too long. Edit profile link is not always aligned.

* Code css changes

* Changes

* Changes

--- a/www/front_src/src/styles/partials/_header.scss
+++ b/www/front_src/src/styles/partials/_header.scss
@@ -254,6 +254,9 @@
     &.profile {
       .submenu-user-type {
         display: inline-block;
+        width: 54%;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .submenu-user-edit {
         font-family: $primary-font-light;
